# mine_bot

./: .gitignore  main.py  pyproject.toml
mine_bot/: binance_trading_bot.py
mine_bot/endpoints/: endpoints.py
mine_bot/env/: .env.exxample  settings.py
mine_bot/error_codes/: error_codes.py
mine_bot/utils/: utils.py
tests/: test_mine_bot.py
