[tool.poetry]
name = "mine_bot"
version = "0.1.0"
description = ""
authors = ["nguyen1997phuc <phucnguyen18041997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.15.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
